Addition lang ng ibang html and changes sa backend

--- a/chmc_wbms/templates/admin/admin_login.html
+++ b/chmc_wbms/templates/admin/admin_login.html
@@ -26,7 +26,7 @@
                 <button type="submit">Login</button>
             </div>
             <div class="admin-login">
-                <a href="{% url 'login' %}">Employee Login</a>
+                <a href="{% url 'employee_login' %}">Employee Login</a>
             </div>
         </form>
 
