--- a/chmc_wbms/templates/admin/admin_login.html
+++ b/chmc_wbms/templates/admin/admin_login.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Login</h2>
+        <h2>Admin Login</h2>
         <form method="POST">
             {% csrf_token %}
             {{ form.non_field_errors }}
