Inaayos ko pa navbar and sidebar 2

--- a/chmc_wbms/templates/admin/admin_dashboard.html
+++ b/chmc_wbms/templates/admin/admin_dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'admin/admin_base.html' %}
 
-{% block title %}Product List{% endblock %}
+{% block title %}Admin Dashboard{% endblock %}
 
 {% block content %}
         <h1>Admin Dashboard</h1>
