--- a/chmc_wbms/templates/admin/includes/admin_navbar.html
+++ b/chmc_wbms/templates/admin/includes/admin_navbar.html
@@ -19,7 +19,7 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                             <span class="hello-msg">Hello, Admin!</span> 
-    
+                            <a href="{% url 'logout' %}" class="btn">Create New Account</a>
         
                     <button class="btn btn-primary"><span><a href="{% url 'logout' %}" class="btn" onclick="return confirmLogout()">Logout</a></span></button>
                 </li>
