--- a/chmc_wbms/templates/admin/includes/admin_navbar.html
+++ b/chmc_wbms/templates/admin/includes/admin_navbar.html
@@ -31,5 +31,6 @@
 <script>
     function confirmLogout() {
         return confirm("Are you sure you want to log out?");
+        pabura lang nito
     }
 </script>
