--- a/chmc_wbms/static/css/login.css
+++ b/chmc_wbms/static/css/login.css
@@ -1,7 +1,7 @@
-.bg {
+body {
     height: 1024px;
     background-color: var(--white_a700);
-    background-image: url(public\image\BG.jpg);
+    background-image: url('C:\Users\Asus\Desktop\BSIT 3 - B1 2nd Semester\IT 17 Capstone Project and Research 1 -\Code\capstone\chmc_wbms\static\public\image\BG.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
