--- a/chmc_wbms/templates/admin/admin_login.html
+++ b/chmc_wbms/templates/admin/admin_login.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'css/styles1.css' %}">  <!-- If you're using CSS -->
 </head>
 <body>
-    <div class="login-container">
+    <div class="bg">
         <h2>Admin Login</h2>
         <form method="POST">
             {% csrf_token %}
