--- a/chmc_wbms/static/css/login.css
+++ b/chmc_wbms/static/css/login.css
@@ -1,6 +1,6 @@
 .bg {
     height: 976px;
-    background-image: url("{% static 'image/BG.jpg' %}");
+    background-image: url(image/BG.jpg);
     background-color: var(--white_a700);
     background-size: cover;
     background-repeat: no-repeat;
