--- a/chmc_wbms/templates/admin/admin_login.html
+++ b/chmc_wbms/templates/admin/admin_login.html
@@ -19,7 +19,7 @@
                 <div class="section_content_image-column">
                     <div class="section_content_text-row">
                         <div class="section_content_text-column">
-                            <img src="C:\Users\Asus\Desktop\BSIT 3 - B1 2nd Semester\IT 17 Capstone Project and Research 1 -\Code\capstone\chmc_wbms\static\public\image/Icon.png" alt="Secondary Logo" class="section_content_image">
+                            <img src="{% static 'image/Icon.png' %}">
                             <p class="section_content_heading ui text size-textxs">
                                 <span class="section_content_heading-span"> CURE </span>
                                 <span class="section_content_heading-span-1"> 
@@ -28,7 +28,7 @@
                                 </span>
                             </p>
                         </div>
-                        <img src="% static 'image/img_line_1.svg' %">
+                        <img src="{% static 'image/img_line_1.svg' %}">
                     </div>
                 </div>
                 <div class="section_form">
