--- a/chmc_wbms/templates/admin/admin_login.html
+++ b/chmc_wbms/templates/admin/admin_login.html
@@ -28,7 +28,7 @@
                                 </span>
                             </p>
                         </div>
-                        <img src="C:\Users\Asus\Desktop\BSIT 3 - B1 2nd Semester\IT 17 Capstone Project and Research 1 -\Code\capstone\chmc_wbms\static\public\image\img_line_1.svg" alt="DEcorative Line" class="section_content_divider">
+                        <img src="{% static 'image/img_line_1.svg' %}" alt="DEcorative Line" class="section_content_divider"/>
                     </div>
                 </div>
                 <div class="section_form">
