--- a/chmc_wbms/static/css/components.css
+++ b/chmc_wbms/static/css/components.css
@@ -34,6 +34,7 @@
 
 .ui.button.size-xs {
     height: 74px;
+    margin: auto;
     padding-left: 34px;
     padding-right: 34px;
     font-size: 35px;
@@ -86,6 +87,12 @@
 .ui.text {
     color: var(--black_900);
     font-family: Raog;
+}
+
+.ui.heading.size-headingxs {
+    font-size: 16px;
+    font-weight: 600;
+    font-style: bold;
 }
 
 .ui.heading.size-headings {
