--- a/chmc_wbms/templates/admin/admin_login.html
+++ b/chmc_wbms/templates/admin/admin_login.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <link rel="stylesheet" href="{% static 'css/components.css' %}">
-    <link rel="stylesheet" href="{% static 'css/styles1.css' %}">  <!-- If you're using CSS -->
+    <link rel="stylesheet" href="{% static 'css/styles1.css' %}">  
 </head>
 <body>
     <div class="bg">
