Konting update lang

--- a/chmc_wbms/templates/admin/admin_login.html
+++ b/chmc_wbms/templates/admin/admin_login.html
@@ -43,7 +43,7 @@
                         <a href="{% url 'employee_login' %}" class="forgot-password-link">
                             <h2 class="ui heading size-headingxs">EMPLOYEE LOGIN</h2>
                         </a>
-                        <button class="section_form_button--login ui button blue_a100_6b size-xs fill round">LOGIN</button>
+                        <button class="section_form_button--login ui button blue_a100_6b size-xs fill round"><a href="{% url 'admin_dashboard' %}">LOGIN</a></button>
                     </div>
                 </div>
             </div>
