--- a/chmc_wbms/templates/admin/includes/admin_sidebar.html
+++ b/chmc_wbms/templates/admin/includes/admin_sidebar.html
@@ -1,12 +1,22 @@
 <div class="logo">
-    <a href="javascript:;" class="simple-text">
-      Your Logo
-    </a>
+
     </div>
         <ul class="nav">
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'admin_dashboard' %}">
                 <i class="nc-icon nc-icon nc-paper-2"></i>
                 <p>Home</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'admin_dashboard' %}">
+                <i class="nc-icon nc-icon nc-paper-2"></i>
+                <p>Create Account</p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'admin_dashboard' %}">
+                <i class="nc-icon nc-icon nc-paper-2"></i>
+                <p>Manage Accounts</p>
                 </a>
             </li>
