--- a/chmc_wbms/static/css/styles1.css
+++ b/chmc_wbms/static/css/styles1.css
@@ -2,10 +2,17 @@
 /*-----Color Variables-----*/
     --black_900: #000000;
     --black_900_33: #00000033;
-    --balck_900_7f: #0000007f;
+    --black_900_3f: #0000003f;
+    --black_900_7f: #0000007f;
     --blue_a100: #99b4ff;
     --blue_a100_6b: #99b4ff6b;
+    --gray_100: #f5f5f5;
     --gray_200: #eaeaea;
+    --gray_400: #c7c7c7;
+    --gray_500: #9e9e9e;
+    --indigo_100: #bfc9ef;
+    --indigo_200: #97a3cd;
+    --indigo_a100: #7f9bff;
     --red_a400: #ed1b2e;
     --white_a700: #ffffff;
 
@@ -13,15 +20,696 @@
 
     --shadow-xs: 0 0 100px 25px #0000007f;
     --shadow-sm: 0 7px 4px 0 #00000033;
+    --shadow-md: 0 4px 4px 0 #0000003f;
 
 /*-----Border Radius Variables-----*/
 
-    --radius-xs: 24px;
-    --radius-sm: 30px;
-    --radius-md: 36px;
+    --radius-xs: 12px;
+    --radius-sm: 22px;
+    --radius-md: 22px;
+    --radius-lg: 24px;
+    --radius-xl: 30px;
+    --radius-2xl: 32px;
+    --radius-3xl: 34px;
+    --radius-4xl: 36px;
 
 /*-----Spacing Variables-----*/
 
-    --space-xs: 14px;
-    --space-sm: 22px;
+    --space-xs: 4px;
+    --space-sm: 6px;
+    --space-md: 8px;
+    --space-lg: 10px;
+    --space-xl: 13px;
+    --space-2xl: 16px;
+    --space-3xl: 18px;
+    --space-4xl: 20px;
+    --space-5xl: 22px;
+    --space-6xl: 26px;
+    --space-7xl: 28px;
+    --space-8xl: 32px;
+    --space-9xl: 34px;
+    --space-10xl: 44px;
+    --space-11xl: 47px;
+    --space-12xl: 64px;
+    --space-13xl: 152px;
 }
+
+.flex-col-end-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-self: flex-end;
+}
+
+.flex-col-center-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.login {
+    height: 1024px;
+    padding-top: 186px;
+    padding-bottom: 186px;
+    background-image: url('../image/BG.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    display: flex;
+    padding: 186px 56px;
+    @media only screen and (max-width: 1050px) {
+        height: auto;
+        padding-top: var(--space-4xl);
+        padding-bottom: var(--space-4xl);
+    }
+}
+
+.row-two {
+    display: flex;
+    justify-content: center;
+}
+
+.admin-dashoard {
+    height: 1024px;
+    background-color: var(--white_a700);
+    background-image: url(../image/BG.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    @media only screen and (max-width: 1050px) {
+        height: auto;
+    }
+}
+
+.rowadmindashboard {
+    display: flex;
+    justify-content: center;
+    @media only screen and (max-width:1050px) {
+        padding-left: var(--space-4xl);
+        padding-right: var(--space-4xl);
+    }
+}
+
+.row6583 {
+    width: 100%;
+}
+
+.row-one {
+    padding-left: 56px;
+    padding-right: 56px;
+    display: flex;
+    justify-content: center;
+    @media only screen and (max-width:1050px) {
+        padding-left: var(--space-4xl);
+        padding-right: var(--space-4xl);
+    }
+}
+
+.columnheaderlog {
+    gap: var(--space-12xl);
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    @media only screen and (max-width: 550px) {
+        gap: var(--space-8xl);        
+    }
+}
+
+.columncurehealth-1 {
+    margin-top: 22px;
+    gap: var(--space-12xl);
+    display: flex;
+    flex-direction: column;
+    @media only screen and (max-width: 550px) {
+        gap: var(--space-8xl);
+    }
+}
+
+.row-3 {
+    background-color: var(--white_a700);
+    box-shadow: var(--shadow-xs);
+    width: 100%;
+    padding: 76px 56px;
+    border-radius: var(--radius-xl);
+    @media only screen and (max-width: 1050px) {
+        padding: var(--space-4xl);        
+    }
+}
+
+.headerheaderlog {
+    margin-top: 22px;
+    margin-left: 30px;
+    margin-right: 62px;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+    background-color: var(--white_a700);
+    @media only screen and (max-width: 1050px) {
+        margin-left: 0px;
+        margin-right: 0px;        
+    }
+}
+
+.rowsortright {
+    display: flex;
+    align-items: center;
+    @media only screen and (max-width: 1050px) {
+        flex-direction: column;
+    }
+}
+
+.row-1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    gap: var(--space-4xl);
+    @media only screen and (max-width: 1050px) {
+        flex-direction: column;
+    }
+}
+
+.columnlineone-1 {
+    padding-left: var(--space-2xl);
+    padding-right: var(--space-2xl);
+    width: 42%;
+    @media only screen and (max-width: 1050px) {
+        width: 100%;
+    }
+}
+
+.rowheaderlogo {
+    align-self: center;
+    width: 24%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @media only screen and (max-width: 1050px) {
+        width: 100%;
+    }
+}
+
+.rowhealth-2 {
+    margin-top: 26px;
+    gap: var(--space-4xl);
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: start;
+}
+
+.imagetwo_one {
+    height: 242px;
+    width: 82%;
+    object-fit: contain;
+}
+
+.curehealth {
+    text-align: center;
+    font-weight: 600 !important;
+    line-height: 42px;
+}
+
+.lineone_one {
+    height: 500px;
+    align-self: center;
+    width: 2%;
+    object-fit: contain;
+}
+
+.curehealth-1 {
+    font-weight: 600 !important;
+    align-self: end;
+    line-height: 22px;
+}
+
+.curehealth-span {
+    color: var(--red_a400);
+}
+
+.curehealth-span-1 {
+    color: var(--black_900);
+}
+
+.columnprice-5 {
+    gap: var(--space-10xl);
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    @media only screen and (max-width: 1050px) {
+        align-self: stretch;
+    }
+}
+
+.rowprofileicono {
+    margin-top: 4p;
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @media only screen and (max-width: 1050px) {
+        width: 100%;
+    } 
+}
+
+.price-7 {
+    align-self: end;
+}
+
+.profileiconone {
+    height: 66px;
+    width: 66px;
+    object-fit: cover;
+}
+
+.columnusername {
+    margin-left: 14px;
+    margin-right: 14px;
+    align-self: stretch;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    @media only screen and (max-width: 1050px){
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+}
+
+.admin {
+    color: var(--black_900) !important;
+    padding-left: 12px;
+    padding-right: 12px;
+    background-color: var(--gray_200) !important;
+    box-shadow: 0 7px 4px 0 var(--black_900_33) !important;
+    width: 92%;
+    height: 74px;
+    border-radius: 24px !important;
+}
+
+.username_one {
+    color: var(--black_900) !important;
+    padding-left: 12px;
+    padding-right: 12px;
+    background-color: var(--gray_200) !important;
+    box-shadow: 0 7px 4px 0 var(--black_900_33) !important;
+    width: 92%;
+    height: 7px;
+    border-radius: 24px !important;
+}
+
+.password-1 {
+    color: var(--black_900) !important;
+    margin-top: 32px;
+    padding-left: 12px;
+    padding-right: 12px;
+    background-color: var(--gray_200) !important;
+    box-shadow: 0 7px 4px 0 var(--black_900_33) !important;
+    width: 92%;
+    height: 74%;
+    border-radius: 24px !important;
+}
+
+.forgotpassword-link {
+    color: var(--black_900_33) !important;
+}
+
+.login-1 {
+    color: var(--black_900) !important;
+    margin-top: 20px;
+    margin-right: 108px;
+    padding-left: var(--space-9xl);
+    padding-right: var(--space-9xl);
+    font-size: 35px;
+    font-weight: 600;
+    background-color: var(--blue_a100) !important;
+    box-shadow: 0 4px 4px 0 var(--black_900_3f) !important;
+    height: 74px;
+    min-width: 220px;
+    border-radius: 36px !important;
+    @media only screen and (max-width: 1050px) {
+        font-size: 33px;
+        margin-right: 0px;
+    }
+
+    @media only screen and (max-width: 550px) {
+        font-size: 31px;
+        padding-left: var(--space-4xl);
+        padding-right: var(--space-4xl);
+    }
+}
+
+.rowlinetwo_one {
+    margin-left: 46px;
+    gap: var(--space-5xl);
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+}
+
+.linetwo_one {
+    height: 60px;
+    background-color: var(--blue_a100);
+    width: 6px;
+}
+
+.columnrecorddat {
+    margin-top: -130px;
+    position: relative;
+    align-self: stretch;
+}
+
+.rowassociated {
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    gap: var(--space-8xl);
+    background-color: var(--gray_400);
+    display: flex;
+    flex: 1;
+    align-items: start;
+    border: 5px solid var(--gray_500);
+    @media only screen and (max-width: 1050px) {
+        align-self: stretch;
+        flex-direction: column;
+        padding-left: var(--space-4xl);
+        padding-right: var(--space-4xl);
+    }
+}
+
+.associated {
+    color: var(--gray_100) !important;
+    margin-top: 28px;
+    text-align: center;
+    width: 24%;
+    line-height: 36%;
+    @media only screen and (max-width: 1050px) {
+        width: 100%;
+    }
+}
+
+.doctors {
+    color: var(--gray_100) !important;
+    margin-top: 28px;
+    margin-left: -16px;
+    text-align: center;
+    position: relative;
+    width: 20%;
+    line-height: 36px;
+    @media only screen and (max-width: 1050px) {
+        width: 100%;
+        padding-left: var(--space-4xl);
+        padding-right: var(--space-4xl);
+        margin-left: 0px;
+    }
+}
+
+.row_three-1 {
+    margin-top: -130px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    position: relative;
+    background-color: var(--white_a700);
+    padding: 84px 56px;
+    @media only screen and (max-width: 1050px) {
+        padding: var(--space-4xl);
+    }
+}
+
+.row_two-1 {
+    border-top-left-radius: var(--radius-lg);
+    border-top-right-radius: var(--radius-lg);
+    background-color: var(--white_a700);
+    padding: var(--space-md);
+    border: 5px solid var(--blue_a100);
+}
+
+.row-one-2 {
+    width: 84%;
+    display: flex;
+    justify-content: flex-end;
+    @media only screen and (max-width: 1050px) {
+        flex-direction: column;
+        width: 100%;
+    }
+}
+
+.price-5 {
+    font-weight: 700 !important;
+}
+
+.rowfd4w_one {
+    z-index: 2;
+    flex: 1;
+    position: absolute;
+    display: flex;
+    justify-content: flex-end;
+    top: 9%;
+    right: 0px;
+    left: 0px;
+    margin: auto 64px;
+    @media only screen and (max-width: 1050px) {
+        flex-direction: column;
+        position: relative;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+}
+
+.fd4w_one {
+    height: 130px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    z-index: 3;
+    background-color: var(--white_a700);
+    width: 24%;
+    position: relative;
+}
+
+.stackhome-1 {
+    height: 854px;
+    position: relative;
+    align-items: center;
+    @media only screen and (max-width: 1050px) {
+        height: auto;
+    }
+}
+
+.columnhome-1 {
+    flex: 1;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    top: 0px;
+    height: max-content;
+    margin: auto;
+}
+
+.columnhome-4 {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.recordlist-1 {
+    margin-bottom: 38px;
+    text-align: center;
+    width: 100%;
+    line-height: 36px;
+}
+
+.home-6 {
+    color: var(--gray_100) !important;
+    margin-top: 28px;
+    @media only screen and (max-width: 1050px) {
+        margin-top: 0px;
+    }
+}
+
+.record-2 {
+    margin-bottom: 38px;
+    text-align: center;
+    line-height: 36px;
+}
+
+.recorddata {
+    color: var(--gray_100) !important;
+    margin-top: 22px;
+    @media only screen and (max-width: 1050px) {
+        margin-top: 0px;
+    }
+}
+
+.home {
+    margin-bottom: 36px;
+}
+
+.columnimport {
+    margin-top: -130px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    gap: var(--space-6xl);
+    display: flex;
+    position: flex;
+    background-color: var(--white_a700);
+    align-self: stretch;
+    flex-direction: column;
+    align-items: start;
+    padding: 50px 56px 50px var(--space-12xl);
+    @media only screen and (max-width: 1050px) {
+        padding: var(--space-4xl);
+    }
+}
+
+.import_files {
+    color: var(--black_900) !important;
+    margin-top: 44px;
+    padding-left: 25px;
+    padding-right: 11px;
+    font-size: 25px;
+    font-weight: 700;
+    gap: var(--space-3xl);
+    height: 66px;
+    min-width: 268px;
+    border-radius: 32px !important;
+    border: 5px solid var(--blue_a100) !important;
+    @media only screen and (max-width: 1050px) {
+        font-size: 23px;
+    }
+
+    @media only screen and (max-width: 550px) {
+        font-size: 21px;
+        padding-left: var(--space-4xl);
+    }
+}
+
+.import {
+    height: 44px;
+    width: 44px;
+    object-fit: cover;
+}
+
+.rowlinethree {
+    padding-top: var(--space-12xl);
+    padding-bottom: var(--space-12xl);
+    background-color: var(--white_a700);
+    align-self: stretch;
+    border-radius: var(--radius-lg);
+    border: 5px solid var(--blue_a100);
+    @media only screen and (max-width: 1050px) {
+        padding-top: var(--space-4xl);
+        padding-bottom: var(--space-4xl);
+    }
+}
+
+.linethree_one {
+    height: 5px;
+    margin-bottom: 314px;
+    transform: rotate(-180deg);
+    background-color: var(--blue_a100);
+}
+
+.page_1 {
+    color: var(--black_900) !important;
+    font-size: 25px;
+    font-weight: 700;
+    gap: var(--space-9xl);
+    align-self: end;
+    background-color: var(--white_a700) !important;
+    height: 44px;
+    min-width: 252px;
+    border: 4px solid var(--blue_a100);
+    @media only screen and (max-width: 1050px) {
+        font-size: 23px;
+    }
+
+    @media only screen and (max-width: 550px) {
+        font-size: 21px;
+    }
+}
+
+.left-icon-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 42px;
+    height: 42px;
+    background-color: var(--blue_a100);
+}
+
+.sort-left {
+    height: 28px;
+    background-color: var(--blue_a100);
+    width: 28px;
+    object-fit: cover;
+    padding: var(--space-sm);
+}
+
+.rowfd1w_one-1 {
+    z-index: 1;
+    width: 34%;
+    position: relative;
+    display: flex;
+    @media only screen and (max-width: 1050px) {
+        width: 100%;
+    }
+
+    @media only screen and (max-width: 550px) {
+        flex-direction: column;
+    }
+}
+
+.fd1w_one-2 {
+    height: 130px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    z-index: 2;
+    background-color: var(--white_a700);
+    width: 100%;
+    position: relative;
+}
+
+.fd2w_one-2 {
+    height: 130px;
+    margin-left: -12px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    position: relative;
+    background-color: var(--white_a700);
+    width: 100%;
+    @media only screen and (max-width: 1050px) {
+        margin-left: 0px;
+    }
+}
+
+.fd5w_one {
+    height: 130px;
+    margin-left: -14px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    position: relative;
+    background-color: var(--white_a700);
+    width: 20%;
+    @media only screen and (max-width: 1050px) {
+        margin-left: 0px;
+    }
+}
+
+.fd3w_one-2 {
+    height: 130px;
+    margin-left: -2px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    position: relative;
+    background-color: var(--white_a700);
+    width: 22%;
+    @media only screen and (max-width: 1050px) {
+        margin-left: 0px;
+    }
+}
+
