--- a/chmc_wbms/templates/admin/admin_login.html
+++ b/chmc_wbms/templates/admin/admin_login.html
@@ -23,12 +23,12 @@
                             <p class="section_content_heading ui text size-textxs">
                                 <span class="section_content_heading-span"> CURE </span>
                                 <span class="section_content_heading-span-1"> 
-                                HEALTH <br /> 
-                                MEDICAL CLINIC <br /> ONLINE SYSTEM
+                                    HEALTH <br /> 
+                                    MEDICAL CLINIC <br /> ONLINE SYSTEM
                                 </span>
                             </p>
                         </div>
-                        <img src="{% static 'image/img_line_1.svg' %}" alt="DEcorative Line" class="section_content_divider"/>
+                        <img src="{% static 'image/img_line_1.svg' %}" alt="Lineone" class="section_content_divider"/>
                     </div>
                 </div>
                 <div class="section_form">
@@ -43,12 +43,12 @@
                         <a href="{% url 'employee_login' %}" class="forgot-password-link">
                             <h2 class="ui heading size-headingxs">EMPLOYEE LOGIN</h2>
                         </a>
-                        <button class="section_form_button--login ui button blue_a100_6b size-xs fill round"><a href="{% url 'admin_dashboard' %}">LOGIN</a></button>
+                        <button class="section_form_button--login ui button blue_a100_6b size-lg fill round"><a href="{% url 'admin_dashboard' %}">LOGIN</a></button>
                     </div>
                 </div>
             </div>
         </div>
-    </div>        
+    </div>     
         <!-- <h2>Admin Login</h2>
         <form method="POST">
             {% csrf_token %}
