--- a/chmc_wbms/templates/admin/includes/admin_navbar.html
+++ b/chmc_wbms/templates/admin/includes/admin_navbar.html
@@ -1,5 +1,7 @@
+{% load static %}
+
 <!-- templates/navbar.html -->
-<style>
+<!-- <style>
     .hello-msg{
         font-size: 18px;
         color: black;
@@ -10,10 +12,29 @@
         font-size: 18px;
         color: black;
     }
-</style>
+</style> -->
+     
+<div class="headerheaderlog"> 
+    <div class="row-1">
+        <div class="rowheaderlogo">
+            <img scr="{% static 'image/Icon.png' %}" alt="Admin Dashboard Logo" class="headerlogo_one" />
+            <p class="curehealth-1 ui text size-textxs">
+                <span class="curehealth-span"> CURE</span>
+                <span class="curehealth-span-1"> HEATLH <br />MEDICAL CLINIC<br />ONLINE SYSTEM</span>
+            </p>
+        </div>
+        <div class="rowprofileicono">
+            <img scr="{% static 'image/profile_ICON.png' %}" alt="Profileicon" class="profileiconone">
+            <h4 class="admin ui heading size-headinglg-name">ADMIN</h4>
+            <div class="rowlinetwo_one">
+                <div class="linetwo_one"></div>
+                <h4 class="ui heading size-headinglg-logout"><a href="{% url 'admin_logout' %}">LOGOUT</a></h4>
+            </div>
+        </div>
+    </div>
+</div>
         
-        
-<nav class="navbar navbar-expand-lg " color-on-scroll="500">
+<!-- <nav class="navbar navbar-expand-lg " color-on-scroll="500">
     <div class="container-fluid">
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
             <ul class="navbar-nav ml-auto">
@@ -33,4 +54,4 @@
         return confirm("Are you sure you want to log out?");
 
     }
-</script>
+</script> -->
