--- a/chmc_wbms/static/css/components.css
+++ b/chmc_wbms/static/css/components.css
@@ -4,7 +4,6 @@
 
 .ui.input.size-xs {
     height: 74px;
-    padding-left: var(--space-xs);
     padding-right: var(--space-xs);
     font-size: 27px;
 }
@@ -108,6 +107,7 @@
 }
 
 .ui.text.size.textxs {
+    font-family: Roag;
     font-size: 60px;
     font-weight: 400px;
     font-style: normal;
@@ -121,9 +121,9 @@
 }
 
 .ui.text {
-    font-size: 35px;
+    font-size: 19px;
     color: var(--black_900);
-    font-family: Raog;
+    font-family: Roag;
 }
 
 .ui.heading.size-headingxs {
@@ -132,7 +132,98 @@
     font-style: bold;
 }
 
-.ui.heading.size-headings {
+.ui.heading.size-headingsm {
+    font-size: 20px;
+    font-weight: 700;
+    font-style: bold;
+}
+
+.ui.heading.size-headingmd {
+    font-size: 21px;
+    font-weight: 700;
+    font-style: bold;
+}
+
+.ui.heading.size-headinglg-name {
+    font-size: 25px;
+    font-weight: 600;
+    font-style: bold;
+    @media only screen and (max-width: 1050px) {
+        font-size: 23px;
+    }
+
+    @media only screen and (max-width: 550px) {
+        font-size: 21px;
+    }
+}
+
+.ui.heading.size-headinglg-logout {
+    padding-right: 30px;
+    font-size: 25px;
+    font-weight: 600;
+    font-style: bold;
+    @media only screen and (max-width: 1050px) {
+        font-size: 23px;
+    }
+
+    @media only screen and (max-width: 550px) {
+        font-size: 21px;
+    }
+}
+
+.ui.heading.size-headingxl {
+    font-size: 30px;
+    font-weight: 600;
+    font-style: bold;
+    @media only screen and (max-width: 1050px) {
+        font-size: 28px;
+    }
+
+    @media only screen and (max-width: 550px) {
+        font-size: 26px;
+    }
+}
+
+.ui.heading.size-heading2xl {
+    font-size: 32px;
+    font-weight: 700;
+    font-style: bold;
+    @media only screen and (max-width: 1050px) {
+        font-size: 30px;
+    }
+
+    @media only screen and (max-width: 550px) {
+        font-size: 28px;
+    }
+}
+
+.ui.heading.size-heading3xl {
+    font-size: 33px;
+    font-weight: 700;
+    font-style: bold;
+    @media only screen and (max-width: 1050px) {
+        font-size: 31px;
+    }
+
+    @media only screen and (max-width: 550px) {
+        font-size: 29px;
+    }
+}
+
+.ui.heading.size-heading4xl {
+    font-size: 34px;
+    font-weight: 700;
+    font-style: bold;
+    @media only screen and (max-width: 1050px) {
+        font-size: 32px;
+    }
+
+    @media only screen and (max-width: 550px) {
+        font-size: 30px;
+    }
+}
+
+.ui.heading.size-heading5xl {
     font-size: 40px;
     font-weight: 600;
     font-style: bold;
