Login changes and fixed picture issue

--- a/chmc_wbms/templates/admin/includes/admin_navbar.html
+++ b/chmc_wbms/templates/admin/includes/admin_navbar.html
@@ -17,14 +17,14 @@
 <div class="headerheaderlog"> 
     <div class="row-1">
         <div class="rowheaderlogo">
-            <img scr="{% static 'image/Icon.png' %}" alt="Admin Dashboard Logo" class="headerlogo_one" />
+            <img src="{% static 'image/Icon.png' %}" alt="Admin Dashboard Logo" class="headerlogo_one" />
             <p class="curehealth-1 ui text size-textxs">
                 <span class="curehealth-span"> CURE</span>
                 <span class="curehealth-span-1"> HEATLH <br />MEDICAL CLINIC<br />ONLINE SYSTEM</span>
             </p>
         </div>
         <div class="rowprofileicono">
-            <img scr="{% static 'image/profile_ICON.png' %}" alt="Profileicon" class="profileiconone">
+            <img src="{% static 'image/profile_ICON.png' %}" alt="Profileicon" class="profileiconone">
             <h4 class="admin ui heading size-headinglg-name">ADMIN</h4>
             <div class="rowlinetwo_one">
                 <div class="linetwo_one"></div>
