--- a/chmc_wbms/templates/admin/admin_login.html
+++ b/chmc_wbms/templates/admin/admin_login.html
@@ -46,6 +46,9 @@
                                 LOGIN
                             </button>
                         </form>
+                        <a href="{% url 'employee_login' %}" class="forgot-password-link">
+                            <h2 class="ui heading size-headingxs">EMPLOYEE LOGIN</h2>
+                        </a>
                     </div>
                 </div>
             </div>
