--- a/chmc_wbms/templates/admin/includes/admin_navbar.html
+++ b/chmc_wbms/templates/admin/includes/admin_navbar.html
@@ -28,6 +28,10 @@
             <h4 class="admin ui heading size-headinglg-name">ADMIN</h4>
             <div class="rowlinetwo_one">
                 <div class="linetwo_one"></div>
+                <h4 class="ui heading size-headinglg-logout"><a href="{% url 'create_account' %}">Create Account</a></h4>
+            </div>
+            <div class="rowlinetwo_one">
+                <div class="linetwo_one"></div>
                 <h4 class="ui heading size-headinglg-logout"><a href="{% url 'admin_logout' %}">LOGOUT</a></h4>
             </div>
         </div>
