--- a/chmc_wbms/templates/admin/admin_base.html
+++ b/chmc_wbms/templates/admin/admin_base.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="{% static 'assets/css/bootstrap.min.css' %}" rel="stylesheet" />
     <link href="{% static 'assets/css/light-bootstrap-dashboard.css' %} " rel="stylesheet" />
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="{% static 'assets/css/demo.css' %}" rel="stylesheet" />
 
     <link rel="stylesheet" href="{% static 'css/font.css' %}">
@@ -24,6 +24,20 @@
     <link rel="stylesheet" href="{% static 'css/admin_dashboard.css' %}">
     <link rel="stylesheet" href="{% static 'css/components.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles1.css' %}">  
+
+    <script>
+        // Function to check if passwords match
+        function validatePassword() {
+            const password = document.getElementById("floatingPassword").value;
+            const confirmPassword = document.getElementById("floatingConfirmPassword").value;
+            
+            if (password !== confirmPassword) {
+                alert("Passwords do not match!");
+                return false; // Prevents form submission
+            }
+            return true; // Allows form submission
+        }
+      </script>
 </head>
 
 <body>
@@ -36,7 +50,7 @@
         </div> -->
         <div class="main-panel">
             {% include 'admin/includes/admin_navbar.html' %}
-            <div class="content">
+            <div class="container">
                 <div class="container-fluid">
                     <div class="section">
                         <main>
@@ -48,6 +62,7 @@
                 </div>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="{% static 'assets/js/core/jquery.3.2.1.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'assets/js/core/popper.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'assets/js/core/bootstrap.min.js' %}" type="text/javascript"></script>
