--- a/chmc_wbms/templates/admin/includes/admin_navbar.html
+++ b/chmc_wbms/templates/admin/includes/admin_navbar.html
@@ -1,18 +1,4 @@
 {% load static %}
-
-<!-- templates/navbar.html -->
-<!-- <style>
-    .hello-msg{
-        font-size: 18px;
-        color: black;
-        margin-right: 20px;
-    }
-        
-    .logout{
-        font-size: 18px;
-        color: black;
-    }
-</style> -->
      
 <div class="headerheaderlog"> 
     <div class="row-1">
@@ -28,7 +14,7 @@
             <h4 class="admin ui heading size-headinglg-name">ADMIN</h4>
             <div class="rowlinetwo_one">
                 <div class="linetwo_one"></div>
-                <h4 class="ui heading size-headinglg-logout"><a href="{% url 'create_account' %}">Create Account</a></h4>
+                <h4 class="ui heading size-headinglg-logout"><a href="{% url 'create_account' %}">CREATE ACCOUNT</a></h4>
             </div>
             <div class="rowlinetwo_one">
                 <div class="linetwo_one"></div>
@@ -37,25 +23,3 @@
         </div>
     </div>
 </div>
-        
-<!-- <nav class="navbar navbar-expand-lg " color-on-scroll="500">
-    <div class="container-fluid">
-        <div class="collapse navbar-collapse justify-content-end" id="navigation">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                            <span class="hello-msg">Hello, Admin!</span> 
-                            
-        
-                    <button class="btn btn-primary"><span><a href="{% url 'admin_logout' %}" class="btn" onclick="return confirmLogout()">Logout</a></span></button>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
-<script>
-    function confirmLogout() {
-        return confirm("Are you sure you want to log out?");
-
-    }
-</script> -->
