Minor Changes ulit

--- a/chmc_wbms/templates/admin/create_account.html
+++ b/chmc_wbms/templates/admin/create_account.html
@@ -33,9 +33,9 @@
             <label for="floatingMiddle">Middle Name</label>
           </div>
           <div class="form-floating mb-3">
-            <select id="prefix" name="prefix" class="form-select" required>
+            <select id="prefix" name="prefix" class="form-select">
                 <option value="" selected>Select Prefix</option>
-                <option value="Jr.">Jr.</option>
+                <option value="Jr.">Dr.</option>
                 <option value="II">II</option>
                 <option value="III">III</option>
             </select>
